# src/main/kotlin/jp/ac/titech/cs/se/refactorhub/app/interfaces/controller/ExperimentController.kt
@@ -1,0 +1,23 @@
+package jp.ac.titech.cs.se.refactorhub.app.interfaces.controller
+
+import jp.ac.titech.cs.se.refactorhub.app.model.Experiment
+import jp.ac.titech.cs.se.refactorhub.app.model.Refactoring
+import jp.ac.titech.cs.se.refactorhub.app.usecase.service.ExperimentService
+import org.koin.core.KoinComponent
+import org.koin.core.inject
+
+class ExperimentController : KoinComponent {
+    private val experimentService: ExperimentService by inject()
+
+    fun getAll(): List<Experiment> {
+        return experimentService.getAll()
+    }
+
+    fun get(id: Int): Experiment {
+        return experimentService.get(id)
+    }
+
+    fun getRefactorings(id: Int): List<Refactoring> {
+        return experimentService.getRefactorings(id)
+    }
+}
