# src/main/kotlin/jp/ac/titech/cs/se/refactorhub/app/model/Experiment.kt
@@ -1,0 +1,7 @@
+package jp.ac.titech.cs.se.refactorhub.app.model
+
+data class Experiment(
+    val id: Int,
+    val title: String,
+    val description: String
+)
